--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
-  SQLX_VERSION: 0.7.1
+  SQLX_VERSION: 0.7.3
   SQLX_FEATURES: "rustls,postgres"
 
 # A workflow run is made up of one or more jobs, which run in parallel by default
@@ -21,6 +21,9 @@ jobs:
   fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
@@ -34,6 +37,9 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     services:
       postgres:
         image: postgres:14
@@ -67,42 +73,30 @@ jobs:
 
   # `test` container job
   test:
-    # Sets the name `Test` for the job, which is displayed in the GitHub UI
     name: cargo test
-    # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
-    # Service containers to run with the `test` container job
+    defaults:
+      run:
+        working-directory: ./backend
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image 
         image: postgres:14
-        # Environment variables scoped only for the `postgres` element
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
           POSTGRES_DB: postgres
-        # When you map ports using the ports keyword, GitHub uses the --publish command to publish the container’s ports to the Docker host
-        # Opens tcp port 5432 on the host and service container
         ports:
           - 5432:5432
     steps:
-        # Downloads a copy of the code in your repository before running CI tests
       - name: Check out repository code
-        # The uses keyword specifies that this step will run v3 of the actions/checkout action. 
-        # This is an action that checks out your repository onto the runner, allowing you to run scripts or other actions against your code (such as build and test tools).
-        # You should use the checkout action any time your workflow will run against the repository's code.
         uses: actions/checkout@v3
 
-       # This GitHub Action installs a Rust toolchain using rustup. It is designed for one-line concise usage and good defaults.
       - name: Install the Rust toolchain
         uses: dtolnay/rust-toolchain@stable
 
-      # A GitHub Action that implements smart caching for rust/cargo projects with sensible defaults.
       - name: Rust Cache Action
         uses: Swatinem/rust-cache@v2
         with:
-          # An additional cache key that is added alongside the automatic `job`-based cache key and can be used to further differentiate jobs. default: empty
           key: sqlx-${{ env.SQLX_VERSION }}
 
       - name: Install sqlx-cli
@@ -112,9 +106,6 @@ jobs:
             --features ${{ env.SQLX_FEATURES }}
             --no-default-features
             --locked
-            # The --locked flag can be used to force Cargo to use the packaged Cargo.lock file if it is available. 
-            # This may be useful for ensuring reproducible builds, to use the exact same set of dependencies that were available when the package was published. 
-            # It may also be useful if a newer version of a dependency is published that no longer builds on your system, or has other problems
 
       - name: Install postgresql-client
         run: sudo apt-get update && sudo apt-get install postgresql-client -y
@@ -129,6 +120,9 @@ jobs:
   coverage:
     name: Code coverage
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     services:
       postgres:
         image: postgres:14
