--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -52,7 +52,12 @@ serde_json = "1"
 axum = "0.7"
 axum-extra = { version = "0.9", features = ["cookie"] }
 tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "trace"] }
+tower-http = { version = "0.5", features = [
+	"cors",
+	"trace",
+	"request-id",
+	"util",
+] }
 hyper = { version = "1", features = ["full"] }
 jsonwebtoken = "9"
 rand_core = { version = "0.6.4", features = ["std"] }
