--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -51,6 +51,7 @@ jobs:
           - 5432:5432
     steps:
       - uses: actions/checkout@v3
+      - uses: rui314/setup-mold@v1
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: clippy
@@ -93,6 +94,9 @@ jobs:
 
       - name: Install the Rust toolchain
         uses: dtolnay/rust-toolchain@stable
+        
+      - name: Install the mold linker
+        uses: rui314/setup-mold@v1
 
       - name: Rust Cache Action
         uses: Swatinem/rust-cache@v2
