--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,20 +11,14 @@ path = "src/lib.rs"
 path = "src/main.rs"
 name = "zero2prod"
 
+[profile.release]
+strip = true
+
 [dependencies]
 # Author's dependencies
 tokio = { version = "1", features = ["full"] }
 serde = "1.0.115"
 config = { version = "0.13", default-features = false, features = ["yaml"] }
-sqlx = { version = "0.7", default-features = false, features = [
-	"runtime-async-std-native-tls",
-	"runtime-tokio-rustls",
-	"macros",
-	"postgres",
-	"uuid",
-	"chrono",
-	"migrate",
-] }
 uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 reqwest = { version = "0.11", default-features = false, features = [
@@ -61,6 +55,11 @@ tower-http = { version = "0.5", features = [
 hyper = { version = "1", features = ["full"] }
 jsonwebtoken = "9"
 rand_core = { version = "0.6.4", features = ["std"] }
+
+[dependencies.sqlx]
+version = "0.7"
+default-features = false
+features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio"]
 
 [dev-dependencies]
 once_cell = "1.7.2"
