--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "zero2prod"
+name = "ethistyle"
 version = "0.1.0"
 authors = ["LukeMathWalker <rust@lpalmieri.com>"]
 edition = "2021"
@@ -9,51 +9,41 @@ path = "src/lib.rs"
 
 [[bin]]
 path = "src/main.rs"
-name = "zero2prod"
+name = "ethistyle"
 
 [profile.release]
 strip = true
 
 [dependencies]
-# Author's dependencies
-tokio = { version = "1", features = ["full"] }
-serde = "1.0.115"
-config = { version = "0.13", default-features = false, features = ["yaml"] }
-uuid = { version = "1", features = ["v4", "serde"] }
-chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
-reqwest = { version = "0.11", default-features = false, features = [
-  "json",
-  "rustls-tls",
-  "cookies",
-] }
-log = "0.4"
+# Server
+axum = "0.7"
+# axum-extra = { version = "0.9", features = ["cookie"] }
+tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }
+
+# Serialization
+serde = "1"
+serde_json = "1"
+serde-aux = "4"
+
+# Tracing
 tracing = "0.1.19"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.2"
-thiserror = "1.0.24"
-serde-aux = "4"
+
+config = { version = "0.13", default-features = false, features = ["yaml"] }
+uuid = { version = "1", features = ["v4", "serde"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 unicode-segmentation = "1.7.1"
-rand = { version = "0.8", features = ["std_rng"] }
-base64 = "0.21.0"
-argon2 = { version = "0.5", features = ["std"] }
+
+argon2 = { version = "0.5", features = ["password-hash"] }
 validator = "0.16"
 secrecy = { version = "0.8", features = ["serde"] }
-serde_json = "1"
 
-# I added axum dependencies
-axum = "0.7"
-axum-extra = { version = "0.9", features = ["cookie"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = [
-  "cors",
-  "trace",
-  "request-id",
-  "util",
-] }
-hyper = { version = "1", features = ["full"] }
 jsonwebtoken = "9"
-rand_core = { version = "0.6.4", features = ["std"] }
+rand_core = "0.6.4"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -61,11 +51,6 @@ default-features = false
 features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio"]
 
 [dev-dependencies]
+reqwest = "0.11"
 once_cell = "1.7.2"
 claims = "0.7.0"
-quickcheck = "~0.9"
-quickcheck_macros = "~0.9"
-fake = "~2.3"
-wiremock = "0.5"
-serde_json = "1.0.61"
-linkify = "0.10"
