--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM lukemathwalker/cargo-chef:latest-rust-1.74.1 as chef
 WORKDIR /app
-RUN apt update && apt install clang mold -y
+RUN apt-get update && apt-get install clang mold -y
 
 # This step computes a lock file for the project
 FROM chef as  planner
@@ -14,19 +14,19 @@ RUN cargo chef cook --release --recipe-path recipe.json
 
 COPY . .
 ENV SQLX_OFFLINE=true
-RUN cargo build --release --bin zero2prod
+RUN cargo build --release --bin ethistyle
 
 # Runtime stage, only the things in that stage will be in the final image
 FROM debian:bookworm-slim AS runtime
 WORKDIR /app
 
 RUN apt-get update -y \
-	&& apt-get install -y --no-install-recommends openssl ca-certificates \
-	&& apt-get autoremove -y \
-	&& apt-get clean -y \
-	&& rm -rf /var/lib/apt/lists/*
+  && apt-get install -y --no-install-recommends openssl ca-certificates \
+  && apt-get autoremove -y \
+  && apt-get clean -y \
+  && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /app/target/release/zero2prod zero2prod
+COPY --from=builder /app/target/release/ethistyle ethistyle
 COPY configuration configuration
 ENV APP_ENVIRONMENT=production
-ENTRYPOINT [ "./zero2prod" ]
+ENTRYPOINT [ "./ethistyle" ]
