--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,11 +25,21 @@ unwrap_used = "warn"
 
 [dependencies]
 # Server
-axum = "0.7"
+axum = { version = "0.7", features = ["multipart"] }
 # axum-extra = { version = "0.9", features = ["cookie"] }
 tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
 tower = "0.4"
-tower-http = { version = "0.5", features = ["trace", "request-id", "util"] }
+tower-http = { version = "0.5", features = [
+  "trace",
+  "request-id",
+  "util",
+  "fs",
+  "cors",
+] }
+
+# Image handling
+image = "0.24"
+fast_image_resize = "3"
 
 # Serialization
 serde = "1"
