fix: Write message works

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -77,3 +77,4 @@ features = ["macros", "postgres", "uuid", "chrono", "migrate", "runtime-tokio"]
 reqwest = "0.11"
 once_cell = "1.7.2"
 claims = "0.7.0"
+random_user = "0.3"
