--- a/front/package.json
+++ b/front/package.json
@@ -45,8 +45,10 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "caniuse-lite": "^1.0.30001612",
+    "classnames": "^2.5.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "17.4.2",
