fix: Fixed linting, and got ready for production

--- a/front/.eslintrc
+++ b/front/.eslintrc
@@ -4,7 +4,9 @@
     "es2021": true
   },
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "extends": [
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
