--- a/front/package.json
+++ b/front/package.json
@@ -40,10 +40,12 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "2.0.18",
+    "axios": "^1.6.8",
     "caniuse-lite": "^1.0.30001612",
     "classnames": "^2.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-slider": "^2.0.6"
   },
   "devDependencies": {
